--- a/Client/Pages/Products.razor
+++ b/Client/Pages/Products.razor
@@ -1,4 +1,7 @@
 ﻿@page "/products"
+
+@using System.Text.Json;
+
 @inject HttpClient http
 @inject NavigationManager navigation
 
@@ -31,7 +34,8 @@
 
     protected override async Task OnInitializedAsync()
     {
-        products = await http.GetFromJsonAsync<IEnumerable<Product>>("api/products");
+        products = (await http.GetFromJsonAsync<ProductsResponse>("api/products")).Result;
+        Console.WriteLine($"Received Products: {products.ToString()}");
     }
 
     private void AddNewProduct()
