Create generic ApiResponse object * the azure-functions-response contains an object property result, which we need to handle correct when deserialize json

--- a/Client/Pages/ProductDetails.razor
+++ b/Client/Pages/ProductDetails.razor
@@ -71,7 +71,7 @@ else
         }
         else
         {
-            var products = await http.GetFromJsonAsync<IEnumerable<Product>>("api/products");
+            var products = (await http.GetFromJsonAsync<ApiResponse<IEnumerable<Product>>>("api/products")).Result;
             product = products.First(p => p.Id == ProductId);
         }
     }
